--- a/app/views/homa_page/index.html.erb
+++ b/app/views/homa_page/index.html.erb
@@ -11,7 +11,7 @@
             <table class="table table-striped mt-3">
                 <thead>
                 <tr>
-                    <th>Fecha</th>
+                    <th>Fecha a</th>
                     <th>Referencia</th>
                     <th>Valor</th>
                     <th>Estado</th>
